name:               system-time-monotonic
version:            0.1
synopsis:           Simple library for using the system's monotonic clock
description:
    Simple library for using the system's monotonic clock.  This library is
    intended to be portable and reliable, but does not (necessarily) provide
    high-resolution timing.
    .
        * On Windows, this uses @QueryPerformanceCounter@.  If that is not
          available, it falls back to @GetTickCount@.
    .
        * On Linux, this uses @clock_gettime@ with @CLOCK_MONOTONIC@.
homepage:           https://github.com/joeyadams/haskell-system-time-monotonic
license:            BSD3
license-file:       LICENSE
author:             Joey Adams
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) Joseph Adams 2012
category:           System
build-type:         Simple
cabal-version:      >=1.8

extra-source-files:
    testing/diffCTimeSpec.hs
    testing/threadDelayMSec.hs

source-repository head
    type:       git
    location:   git://github.com/joeyadams/haskell-system-time-monotonic.git

library
    exposed-modules:
        System.Time.Monotonic
        System.Time.Monotonic.Direct

    build-tools: hsc2hs

    ghc-options: -Wall -fwarn-tabs

    build-depends   : base == 4.*
                    , time
